--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <p class="text3">
             stomach rumbling from 
         </p>
-        <p class="text35">
-            <b>hunger</b>.
+        <p class="text35">hunger.
         </p>
         <p class="text4">There seem to be a <b>safe</b> 
         </p>
@@ -40,6 +39,9 @@
         <p class="text5">
             Do you want to go there?
         </p>
+        <button>
+            let's go there
+        </button>
     </div>
     <script src="js.js"></script>
 </body>
